--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
-[submodule "libs/glm"]
-	path = libs/glm
+[submodule "glm"]
+	path = Tephryte/vendor/glm
 	url = https://github.com/g-truc/glm.git
-[submodule "libs/ImGui"]
-	path = libs/ImGui
+[submodule "ImGui"]
+	path = Tephryte/vendor/ImGui
 	url = https://github.com/ocornut/imgui.git
 	branch = docking
-[submodule "libs/glfw"]
-	path = libs/glfw
+[submodule "glfw"]
+	path = Tephryte/vendor/glfw
 	url = https://github.com/glfw/glfw.git
