Finished prototype vulkan implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ option(GLFW_DOCUMENT_INTERNALS "Include internals in documentation" OFF)
 
 set(LIB_DIR ${PROJECT_SOURCE_DIR}/Tephryte/vendor)
 set(SRC_DIR ${PROJECT_SOURCE_DIR}/Tephryte/src)
+set(SHADER_SRC_DIR ${SRC_DIR}/graphics/shaders/src)
+set(SHADER_BIN_DIR ${SRC_DIR}/graphics/shaders/bin)
 set(GLFW_DIR ${LIB_DIR}/glfw)
 set(IMGUI_DIR ${LIB_DIR}/ImGui)
 set(GLM_DIR ${LIB_DIR}/glm)
@@ -34,9 +36,6 @@ set(IMGUI_SRC
         Tephryte/src/Tephryte.h
         Tephryte/src/Debug.h)
 
-
-
-
 add_executable(Tephryte
         ${IMGUI_SRC}
         ${SRC_DIR}/main.cpp
@@ -48,3 +47,27 @@ add_executable(Tephryte
 
 target_link_libraries(${PROJECT_NAME} glfw Vulkan::Vulkan)
 target_compile_definitions(${PROJECT_NAME} PUBLIC -DImTextureID=ImU64)
+
+
+file(GLOB_RECURSE GLSL_SOURCE_FILES
+        ${SHADER_SRC_DIR}/*.frag
+        ${SHADER_SRC_DIR}/*.vert
+        ${SHADER_SRC_DIR}/*.comp
+        ${SHADER_SRC_DIR}/*.tese
+        ${SHADER_SRC_DIR}/*.tesc
+)
+
+foreach (SHADER ${GLSL_SOURCE_FILES})
+    get_filename_component(FILE_NAME ${SHADER} NAME)
+    set(SPIRV_OUT "${SHADER_BIN_DIR}/${FILE_NAME}.spv")
+    add_custom_command(
+            OUTPUT ${SPIRV_OUT}
+            COMMAND "$ENV{VULKAN_SDK}/Bin/glslangValidator.exe" -V ${SHADER} -o ${SPIRV_OUT}
+            DEPENDS ${SHADER})
+    list(APPEND SPIRV_BINARY_FILES ${SPIRV_OUT})
+endforeach ()
+
+add_custom_target(
+        Shaders
+        DEPENDS ${SPIRV_BINARY_FILES})
+add_dependencies(Tephryte Shaders)
